// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSideNav is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="euiSideNav testClass1 testClass2"
  data-test-subj="test subject string"
>
  <button
    class="euiSideNav__mobileToggle euiLink"
  >
    <span
      class="euiSideNav__mobileWrap"
    >
      <span
        class="euiSideNav__mobileTitle"
      />
      <svg
        aria-hidden="true"
        class="euiIcon euiSideNav__mobileIcon euiIcon--medium"
      >
        <title>
          apps icon
        </title>
        <use
          href="#apps"
        />
      </svg>
    </span>
  </button>
  <div
    class="euiSideNav__content"
  />
</nav>
`;

exports[`EuiSideNav isOpenOnMobile defaults to false 1`] = `
<nav
  class="euiSideNav"
>
  <button
    class="euiSideNav__mobileToggle euiLink"
  >
    <span
      class="euiSideNav__mobileWrap"
    >
      <span
        class="euiSideNav__mobileTitle"
      />
      <svg
        aria-hidden="true"
        class="euiIcon euiSideNav__mobileIcon euiIcon--medium"
      >
        <title>
          apps icon
        </title>
        <use
          href="#apps"
        />
      </svg>
    </span>
  </button>
  <div
    class="euiSideNav__content"
  />
</nav>
`;

exports[`EuiSideNav isOpenOnMobile is rendered when specified as true 1`] = `
<nav
  class="euiSideNav euiSideNav-isOpenMobile"
>
  <button
    class="euiSideNav__mobileToggle euiLink"
  >
    <span
      class="euiSideNav__mobileWrap"
    >
      <span
        class="euiSideNav__mobileTitle"
      />
      <svg
        aria-hidden="true"
        class="euiIcon euiSideNav__mobileIcon euiIcon--medium"
      >
        <title>
          apps icon
        </title>
        <use
          href="#apps"
        />
      </svg>
    </span>
  </button>
  <div
    class="euiSideNav__content"
  />
</nav>
`;
